bottomAd fixes and text size fixes on iPhones
Former-commit-id: aa2b25cee682fb0935b4047d71cad4a20cfcd3c9 [formerly f4cf4ebf57a79eb1ccf059da69464820719a870e] [formerly b4047facb029496bd3a1309eb81cb48e095fba10 [formerly 576e9fb1df4f30b4efab3000ed58822016347eb8]]
Former-commit-id: 3a05f4e254e649fe2d6e8673c7b994e5032cd13b [formerly 8ddf0c0f4c363f0ab888fac01601cdf8e3fd66d3]
Former-commit-id: 4f45f07604da14d02c615dcde0d2e3c7246641bc

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -683,6 +683,12 @@ p.taggedIn a {
     .content .main {
         font-size: 140%;
     }
+    
+    .bottomAd {
+        border-top: 1px solid #ddd;
+        margin-top: 20em;
+        height: 165px;
+    }
 }
 
 /* iPad 1, 2, mini*/
@@ -703,6 +709,12 @@ p.taggedIn a {
     
     .content .main {
         font-size: 140%;
+    }
+    
+    .bottomAd {
+        border-top: 1px solid #ddd;
+        margin-top: 20em;
+        height: 165px;
     }
 }
 
@@ -734,7 +746,7 @@ p.taggedIn a {
 	}
 
     .content .main {
-        font-size: 220%;
+        font-size: 200%;
     }
 
     .content .header .siteTitle {
@@ -769,9 +781,9 @@ p.taggedIn a {
         font-size: 12px;
     }*/
 
-    .content ol {
+/*    .content ol {
         margin-left: 0.25em;
-    }
+    }*/
     
 
     .homepage a.postTitle {
@@ -827,7 +839,7 @@ p.taggedIn a {
 	}
 
     .content .main {
-        font-size: 250%;
+        font-size: 300%;
     }
 
     .content .header .siteTitle {
@@ -862,9 +874,9 @@ p.taggedIn a {
         font-size: 12px;
     }*/
 
-    .content ol {
+/*    .content ol {
         margin-left: 0.25em;
-    }
+    }*/
     
 
     .homepage a.postTitle {
